46th = final edit